# whereisit

./: README.md  docker-compose.yml
formatter/: Dockerfile  pyproject.toml
formatter/src/: main.py
formatter/src/operations/: format.py  process.py
formatter/src/services/: database.py  redis.py
formatter/src/utils/: config.py
formatter/tests/: conftest.py
formatter/tests/helpers/: minimatrix.html  test.base
formatter/tests/operations/: test_format.py
formatter/tests/scripts/: minhtml.py
formatter_db/: init.sql
scraper_db/: init.sql
scraper_service/: Dockerfile  Makefile  README.org
wii_api/: Dockerfile
wii_api/wii/: .envrc  .isort.cfg  alembic.ini  pyproject.toml  tasks.py
wii_api/wii/api/: config.py  main.py
wii_api/wii/api/modules/: __init__.py
wii_api/wii/api/modules/_shared/: __init__.py
wii_api/wii/api/modules/_shared/models/: base.py
wii_api/wii/api/modules/_shared/schema/: base.py  error.py
wii_api/wii/api/modules/jobs/: __init__.py  models.py
wii_api/wii/api/modules/jobs/ddl/: enum.py
wii_api/wii/api/modules/jobs/operations/: commands.py  queries.py
wii_api/wii/api/modules/jobs/routers/: __init__.py  get.py  post.py
wii_api/wii/api/modules/jobs/schema/: job.py
wii_api/wii/api/routers/movie/: router.py
wii_api/wii/api/routers/scrape/: scrape.py
wii_api/wii/api/schema/: base.py  error.py
wii_api/wii/api/schema/job/: __init__.py
wii_api/wii/api/services/: health.py  html_stripper.py  redis.py
wii_api/wii/api/utils/: __init__.py  database.py  error_wrapper.py  logger.py  redis.py
wii_api/wii/test/: conftest.py
wii_api/wii/test/helpers/: sqlalchemy_utils.py
wii_api/wii/test/modules/jobs/operations/: test_job_commands.py  test_job_queries.py
wii_api/wii/where_is_it_migs/: env.py
wii_api/wii/where_is_it_migs/miggy_moos/: 29045c6db429_migration.py  550219341b3e_migration.py  6dde0bcc59d8_migration.py
(+12 files in other folders)
