[tool.poetry]
name = "formatter"
version = "0.0.1"
description = "na"
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
asyncio-redis = "^0.16.0"
beautifulsoup4 = "^4.12.2"
redis = "^5.0.1"
htmlmin = "^0.1.12"
psycopg = {extras = ["binary"], version = "^3.1.12"}


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
pyright = "^1.1.333"
flake8 = "^6.1.0"
pytest = "^7.4.3"
pytest-sugar = "^0.9.7"
pytest-xdist = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
