[tool.poetry]
name = "wii"
version = "0.0.1"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
sqlalchemy = "^2.0.23"
uvicorn = "^0.23.2"
asyncpg = "^0.28.0"
beautifulsoup4 = "^4.12.2"
redis = "^5.0.1"


[tool.poetry.group.dev.dependencies]
pyright = "^1.1.334"
alembic = "^1.12.1"
invoke = "^2.2.0"
greenlet = "^3.0.1"
isort = "^5.12.0"
pytest = "^7.4.3"
requests-mock = "^1.11.0"
sqlalchemy-utils = "^0.41.1"
httpx = "^0.25.1"
pytest-asyncio = "^0.21.1"
pytest-xdist = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath="."
minversion = "6.0"
addopts = "-n 4 -p no:warnings"
console_output_style = "progress"
asyncio_mode = "auto"
markers = [
    "db: marks tests as needing databases (deselect with '-m \"not db\"')",
    "parallel",
    "factory: marks tests as needing factories (deselect with '-m \"not factory\"')",
    "parallel",
    "slow: marks tests that will be slow (deselect with '-n \"now slow\"')",
    "serial"
]